# release-note

./: .gitignore  Cargo.toml  README.md  SECURITY.md  default.nix  flake.nix  typos.toml
.github/workflows/: ci.yml  code-security.yml  nix.yml  nsv.yml  release.yml  shellcheck.yml  typos.yml
scripts/: install.sh
src/: analyzer.rs  contributor.rs  git.rs  lib.rs  main.rs  markdown.rs  metadata.rs  platform.rs  template.rs
src/contributor/: github.rs  gitlab.rs  mod.rs
tests/: analyzer.rs  commit.rs  git.rs  markdown.rs  platform.rs  template.rs
tests/snapshots/: markdown__ai_contributors_have_no_commit_links.snap  markdown__correctly_wraps_long_commit_body.snap  markdown__displays_contributors_with_github_commit_links.snap  markdown__displays_contributors_without_links_for_gitlab.snap  markdown__displays_multiple_contributors.snap  markdown__escapes_table_metacharacters_in_dependency_update_cell.snap  markdown__excludes_git_trailers.snap  markdown__filters_bot_contributors.snap  markdown__generates_no_release_note_when_no_commits.snap  markdown__generates_release_note_from_multiple_categories.snap  markdown__handles_mixed_prose_and_indented_code_block.snap  markdown__handles_mixed_structured_content.snap  markdown__includes_chore_deps_commits_in_dependency_table.snap  markdown__preserves_block_quotes_as_is.snap  markdown__preserves_code_blocks_without_wrapping.snap  markdown__preserves_hyphenated_words.snap  markdown__preserves_indented_code_blocks.snap  markdown__preserves_inline_code_without_wrapping.snap  markdown__preserves_tab_indented_code_blocks.snap  markdown__preserves_tables_without_unwrapping.snap  markdown__preserves_urls_without_wrapping.snap  markdown__unfills_paragraph_to_desired_width.snap  markdown__unwraps_list_items_to_single_lines.snap  markdown__unwraps_numbered_lists_to_single_lines.snap  markdown__unwraps_paragraphs_to_single_lines.snap  markdown__wraps_block_quotes_with_quote_markers.snap  markdown__wraps_list_items_with_hanging_indent.snap  markdown__wraps_numbered_lists_with_hanging_indent.snap
