[package]
name = "release-note"
description = "Generate a release note for your project"
version = "0.1.0"
edition = "2024"
license = "MIT"

[profile.release]
strip = "debuginfo"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"] }
git2 = { version = "0.20.2", default-features = false }
regex = "1.11.1"
serde = { version = "1.0.228", features = ["derive"] }
tera = "1.20.0"

[build-dependencies]
built = { version = "0.8.0", features = ["git2", "semver", "chrono"] }

[dev-dependencies]
tempfile = "3.14"
