[package]
name = "release-note"
description = "Generate a release note for your project"
version = "0.3.0"
edition = "2024"
license = "MIT"

[profile.release]
strip = "debuginfo"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"] }
env_logger = "0.11"
git2 = { version = "0.20.2", default-features = false }
log = "0.4"
once_cell = "1.20"
regex = "1.11.1"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
tera = "1.20.0"
textwrap = "0.16"

[build-dependencies]
built = { version = "0.8.0", features = ["git2", "semver", "chrono"] }

[dev-dependencies]
insta = "1.43"
tempfile = "3.14"
