[package]
name = "release-note"
description = "Generate a release note for your project"
version = "0.3.0"
edition = "2024"
license = "MIT"

[profile.release]
strip = "debuginfo"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"] }
env_logger = "0.11"
git2 = { version = "0.20.2", default-features = false }
log = "0.4"
once_cell = "1.20"
regex = "1.11.1"
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"], default-features = false }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tera = "1.20.0"
textwrap = "0.16"

[build-dependencies]
built = { version = "0.8.0", features = ["git2", "semver", "chrono"] }

[dev-dependencies]
insta = "1.43"
tempfile = "3.14"
wiremock = "0.6"
tokio = { version = "1", features = ["macros", "rt"] }
